<resources>
    <string name="app_name">Onboarding Freebi</string>

    <string name="onboarding_slide1_title">Create an account</string>
    <string name="onboarding_slide1_subtitle">Connect with people around the world</string>
    <string name="onboarding_slide1_desc">User will be able to give you live, chat and meet
        with people nearby.</string>

    <string name="onboarding_slide2_title">Login to your account</string>
    <string name="onboarding_slide2_subtitle">Let\'s build connection with new people</string>
    <string name="onboarding_slide2_desc">Connect helps you locate the people around you who
        are closest from your home.</string>

    <string name="onboarding_slide3_title">Login to your account</string>
    <string name="onboarding_slide3_subtitle">Feel the happiness</string>
    <string name="onboarding_slide3_desc">User will be able to give you live, chat and meet
        with people nearby.</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>

    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>

    <string name="home_screen_title">Home</string>
    <string name="home_screen_text">Can\'t walk? then fly!</string>

</resources>
