<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.login.LoginActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorBlueMidnight"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/usernameEt"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv"
        app:layout_constraintVertical_bias="0.2">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText.Login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingStart="4dp"
            android:paddingEnd="4dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="@+id/usernameEt"
        app:layout_constraintStart_toStartOf="@+id/usernameEt"
        app:layout_constraintTop_toBottomOf="@+id/usernameEt">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText.Login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="4dp"
            android:paddingEnd="4dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/rememberMeBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/remember_me"
        android:textColor="@color/colorGrey"
        app:layout_constraintEnd_toStartOf="@+id/forgotPasswordTv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/passwordEt"
        app:layout_constraintTop_toBottomOf="@+id/passwordEt" />

    <TextView
        android:id="@+id/forgotPasswordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPurple"
        app:layout_constraintBaseline_toBaselineOf="@+id/rememberMeBtn"
        app:layout_constraintEnd_toEndOf="@+id/passwordEt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rememberMeBtn" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPurple"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordTv"
        app:layout_constraintStart_toStartOf="@+id/rememberMeBtn"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTv" />

    <TextView
        android:id="@+id/signUpTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/new_user"
        android:textColor="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTv" />

</androidx.constraintlayout.widget.ConstraintLayout>